--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body{
     z-index: 10000;
 }
 .circle {
-    width: 500px;
-    height: 500px;
+    width: 1000px;
+    height: 1000px;
     background-color: inherit;
     border-radius: 50%;
     position: relative;
@@ -20,23 +20,23 @@ body{
     background-color: inherit;
     border-radius: 50%;
     position: absolute;
-    top: 50%; /* Розміщення круга по вертикалі в центрі */
-    left: 50%; /* Розміщення круга по горизонталі в центрі */
-    transform: translate(-50%, -50%); /* Зсув вліво на половину ширини та вверх на половину висоти */
-    z-index: 200; /* Це потрібно, щоб гарантувати, що внутрішній круг перекриватиме зовнішній */
-    border: 5px solid black;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 200;
+    border: 5px solid #e5e5e5;;
 }
 .MiniCenterCircle{
-    width: 10px;
-    height: 10px;
-    background-color: darkcyan;
+    width: 20px;
+    height: 20px;
+    background-color: #e48f13;;
     border-radius: 50%;
     position: absolute;
-    top: 50%; /* Розміщення круга по вертикалі в центрі */
-    left: 50%; /* Розміщення круга по горизонталі в центрі */
-    transform: translate(-50%, -50%); /* Зсув вліво на половину ширини та вверх на половину висоти */
-    z-index: 200; /* Це потрібно, щоб гарантувати, що внутрішній круг перекриватиме зовнішній */
-    border: 5px solid black;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    z-index: 200; 
+
 }
 
 .slice {
@@ -46,41 +46,59 @@ body{
     transform-origin: 100% 100%;
 }
 
-.slice.slice1 { background-color: #FF5733; transform: rotate(0deg); }
+.slice.slice1 { background-color: inherit; transform: rotate(0deg); }
 .slice.slice1:hover{
     background-color: #FFF;
 }
 
-.slice.slice2 { background-color: #33FF57; transform: rotate(90deg); }
+.slice.slice2 { background-color: inherit; transform: rotate(90deg); }
 .slice.slice2:hover{
     background-color: #FFF;
 }
 
-.slice.slice3 { background-color: #5733FF; transform: rotate(180deg); }
+.slice.slice3 { background-color: inherit; transform: rotate(180deg); }
 .slice.slice3:hover{
     background-color: #FFF;
 }
 
-.slice.slice4 { background-color: #FF33BD; transform: rotate(270deg); }
+.slice.slice4 { background-color: inherit; transform: rotate(270deg); }
 .slice.slice4:hover{
     background-color: #FFF;
 }
 
-.segment {
+/* .segment {
     position: absolute;
-    width: 2px; /* Ширина риски */
-    height: 100%; /* Висота риски */
-    background-color: black; /* Колір риски */
-    left: 50%; /* Переміщення на відстань по X від центру */
-    transform-origin: 0 50%; /* Забезпечує, що риски обертаються навколо правого краю */
+    width: 2px;
+    height: 100%;
+    background-color: black;
+    left: 50%;
+    transform-origin: 0 50%;
     z-index: 100;
-}
+} */
 
 .segment:nth-child(1) {
-    transform: translateX(-50%) rotate(0deg); /* Зміщення кожного сегмента на 360/кількість_розділів градусів */
+    transform: translateX(-50%) rotate(0deg);
 }
 
 
 .segment:nth-child(2) {
     transform: translateX(-50%) rotate(90deg);
+}
+.material-symbols-outlined{
+    position: absolute;
+    right: 40px;
+    bottom: 40px;
+}
+.material-symbols-outlined.logout{
+    transform: rotate(-90deg);
+}
+.material-symbols-outlined.account_circle{
+    transform: rotate(180deg);
+}
+.material-symbols-outlined.notifications{
+    transform: rotate(90deg);
+}
+.slice:hover > .material-symbols-outlined{
+    color:#e48f13;;
+    cursor: default;
 }
